      as CDATA end) fixed by converting any ">" in element content into
      "&gt;". 
      
    o unencodable characters (any control character except \n, \t, \r) now
      throw exceptions. We may allow a new parameter setting to switch this
      off later.
      
    o the entity-conversion code has been rewritten using Java regex's to
      avoid multiple conversions.

Untyped literal operations deprecated (char, boolean, long, float, double, Object)
     These operations do not work on typed literals.  They converted their arguments
     to plain strings and parsed strings to retrive values.  
     They are a ghost from pre-datatyping RDF.
     ** The forms on RDFNode, String, String+lang, and XML literals remain.
     ** Forms taking a typed literal or a lexical form and RDF datatype added (or already exist).
     Model:      .add, .listStatements, .listSubjectsWithProperty
     Resource:   .hasProperty, .addProperty
	
JAR file changes:
    Added:    arq-extra.jar
    Changed:  wstx-asl-2.8.jar ==> wstx-asl-3.0.0.jar

EnhNodes/UnsupportedPolymorhismException/QualifiedRestriction
    o Any EnhNode now automatically canAs any type already on its
      view ring if that view is still isValid. Previously it
      required finding a relevant Personality and Implementation
      and trying canWrap, which failed if the EnhNode had no EnhGraph,
      eg a Resource allocated by ResourceFactory.

    o This exposed problems with the QualifiedRestriction family of
      classes, which didn't override isValid. They do now.

    o Attempting to .as() an EnhNode with no EnhGraph no longer generates
      a NullPointerException, instead giving an explicit
      UnsupportedPolymorphism exception. 

    o Attempting to canAs an EnhNode with no existing implementation
      of the required type and no EnhGraph returns false.

OntResourceImpl
    o some internal modifications to simplify/correct the code:

        - corrected uses of .remove duing an iteration